gl51-master/src/test/deca/context/invalid/test_rule3_33Equals.deca
//Description
//On doit comparer des objets comparables

{
    int a = 2;
    if(a == true) {} //error
    //PASSED
}